@@ -69,6 +69,9 @@ Bugfixes
 
 Features
 ~~~~~~~~
+- Made io.File::copy() and io.File::move() accept io.File and io.Folder 
+  instances in addition to strings.
+  (friebe)
 - Added values() method to util.collections.HashTable
   (friebe)
 - Added support for multiple cookies in unittest.web.WebTestCase
